syntax = "proto3";

// option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";
// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";

package namenode;

service NameNodeHandler {
    rpc ManejarPropuesta (stream Propuesta) returns (stream Propuesta) {}
}

enum PropuestaStatus {
    Rechazado = 0;
    Aprobado = 1;
}

message Propuesta{
    repeated int32 datanode1 = 1;
    repeated int32 datanode2 = 2;
    repeated int32 datanode3 = 3;
    int32 cantidadPartes = 4;
    PropuestaStatus status = 5;
}


